# about-rust

./: Cargo.toml  README.md  build.rs
local-crate/: Cargo.toml
local-crate/src/: lib.rs
src/clib/: clib.c  clib.h  makeLib.sh
src/lib/: incrementer.rs  mod.rs
tests/: r_01_types.rs  r_02_functions.rs  r_03_control_flow_patterns.rs  r_04_traits.rs  r_05_generics.rs  r_06_associated_types.rs  r_07_object_safety.rs  r_08_copy_move_semantics.rs  r_09_borrowing.rs  r_10_interior_mutability.rs  r_11_smart_pointers.rs  r_12_modules.rs  r_13_tests.rs  r_14_macro.rs  r_15_unsafe.rs  r_16_interoperability.rs  r_17_options.rs  r_18_errors.rs  r_19_hash.rs  r_20_conversions.rs  r_21_reflection.rs  r_22_concurrency.rs  r_23_std.rs  r_24_miscellaneous.rs
tests/common/: mod.rs
